@@ -1,5 +1,8 @@
 2009-12-21  Torbjorn Granlund  <tege@gmplib.org>
 
+	* tune/tuneup.c (all): Call tune_mullo after tune_mulmod_bnm1 due to
+	dependency.
+
 	* mpn/generic/dcpi1_divappr_q.c: Add parameter ASSERTs.
 	* mpn/generic/dcpi1_div_q.c: Likewise.
 	* mpn/generic/dcpi1_div_qr.c: Change ASSERT to enforce dn >= 4.
